[project]
name = "ask-insurance"
version = "0.1.0"
description = "Conversational health-insurance buying guide powered by Gemini and the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "openai-agents",
    "openai",
    "python-dotenv",
    "requests",
    "streamlit",
    "uvicorn[standard]",
]
