[project]
name = "ask-insurance"
version = "0.1.0"
description = "Conversational health-insurance buying guide with MongoDB vector search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "openai-agents",
    "openai",
    "python-dotenv",
    "requests",
    "pymongo>=4.10.0",
    "dnspython>=2.6.0",
    "pypdf>=5.0.0",
    "sentence-transformers>=3.3.0",
    "streamlit",
    "uvicorn[standard]",
]
